--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "trimble-ui-kit",
   "version": "0.1.0",
+  "homepage": "https://trimbleuikit.github.io/home",
   "private": true,
-  "homepage": "https://msankaran0712.github.io/ui-library",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,7 +12,6 @@
     "@types/node": "^16.18.8",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -45,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
