--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trimble-ui-kit",
   "version": "0.1.0",
-  "homepage": "https://trimbleuikit.github.io/home",
+  "homepage": "https://BalasubramanianSundararajan.github.io/trimbleuikit",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
