--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trimble-ui-kit",
   "version": "0.1.0",
-  "homepage": "https://BalasubramanianSundararajan.github.io/Trimble-UI-Kit",
+  "homepage": "https://balasubramaniansundararajan.github.io/Trimble-UI-Kit/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
